--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,4 +19,10 @@ body {
   background: transparent;
 }
 
+.times-tip {
+  font-size: 14px;
+  text-align: center;
+  padding: 20px 0 0 0;
+}
+
 @import 'hack-vant.scss';
